Make sure the reports page scroll in case it goes off screen.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@35848 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_course-reports.scss
+++ b/src/main/resources/scss/_course-reports.scss
@@ -1,5 +1,7 @@
 #course-reports {
 	.report-card {
+		overflow: auto;
+
 		.description {
 			.title {
 				color: $primary-grey;
